# mpVoxels

./: CMakeLists.txt  README.md  blockInteraction.cpp  blockInteraction.hpp  blocks.hpp  chunk.cpp  chunk.hpp  cubeMesh.hpp  directions.hpp  gameMath.cpp  gameMath.hpp  main.cpp  physics.cpp  physics.hpp  player.cpp  player.hpp  renderTypes.hpp  world.cpp  world.hpp
res/: cubesShader.frag  cubesShader.frag.spv  modelShader.frag  modelShader.frag.spv  modelShader.vert  modelShader.vert.spv  transparentShader.frag  transparentShader.frag.spv  transparentShader.vert  transparentShader.vert.spv  uiShader.frag  uiShader.vert  uiShader.vert.spv
res/testModel/: testModel.bbmodel  testModel.mtl
src/: blockInteraction.cpp  blockInteraction.hpp  blocks.hpp  chunk.cpp  chunk.hpp  cubeMesh.hpp  directions.hpp  frustum.cpp  frustum.hpp  implementations.cpp  input.cpp  input.hpp  main.cpp  physics.cpp  player.cpp  player.hpp  primitiveMeshes.hpp  renderTypes.hpp  vertexNeighbors.hpp  world.cpp  world.hpp
